Fixed Bug 32823 - Inconsistent collapse/expand handling for side-panel

--- a/ui/apps/themes/components/toolbar.less
+++ b/ui/apps/themes/components/toolbar.less
@@ -163,6 +163,7 @@
 
 .classic-toolbar-visible .window-content, .abs.below-toolbar { top: @toolbar-height; }
 
+.bottom-toolbar.bottom-toolbar-visible .window-content { bottom: @toolbar-height; }
 .chromeless-window .window-body:not(.mobile-toolbar-visible) { bottom: 0;}
 .chromeless-window .window-body.mobile-toolbar-visible { bottom: @toolbar-height; }
 .chromeless-window.header-bottom .window-body:not(.mobile-toolbar-visible) { bottom: 64px; }
